Code refactoring and improvements

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       </form>
    </section>
    
+   <script src="js/utils.js"></script>
    <script src="js/main.js"></script>
    <script src="js/appareance.js"></script>
    <script src="js/breaks.js"></script>
