--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/modal-settings.css">
    <link rel="stylesheet" href="css/appareance.css">
-   <link rel="stylesheet" href="css/mobile.css">
+   <link rel="stylesheet" href="css/responsive.css">
    
    <title>Pomodoro app</title>
 </head>
